tests/valid/boolean_operators/gt_false.rs
/*
return: 0
*/

main(): i32 {
    return 1 > 2;
}