tests/invalid/numbers/more_than_64_bits.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    // 2**64
    return 18446744073709551616;
}